# ft_ls

./: CMakeCache.txt  CMakeLists.txt  Makefile  acrights_helper.c  arg_parser.c  args.h  cmake_install.cmake  comparators.c  comparators_2.c  comporators.c  del_from_lists.c  directory.c  errors.c  file.c  ft_ls  ft_ls.cbp  ft_ls.h  get_fileinfo_1.c  get_fileinfo_2.c  l_flag.c  l_flag_helper1.c  ls_with_l.c  ls_without_l.c  main.c  print_l_helper.c  rec_flag_helper.c  t_file_helper.c  utils.c  utils2.c
.github/workflows/: make_ls.yml
libft/: ft_strdel.c
libft/ft_printf/: ft_itoa_base.c
